fixed the collapsing welcome-section, used a flex-box instead

--- a/css/styles.css
+++ b/css/styles.css
@@ -63,21 +63,29 @@ header,.welcome{
 
 ***/
 
-.welcome{
+#welcome{
     min-height: 65vh;
     top: 0;
     text-align: center;
-    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 108vh;
 }
-.centered{
-    position: absolute;
-    top: 40%;
-    left: 42%;
+.centered{  
+    margin: auto 0;
+    padding: 15px;  
+    height: 430px;
+    width: 400px;
 }
 .avatar {
     border-radius: 50%;
     width: 250px;
     height: 250px;
+}
+.social-media{
+    padding: 10px 0;
 }
 .social-media > span a {
     color: #43b2e3;
@@ -90,4 +98,27 @@ header,.welcome{
     color: #43b2e3;
     text-decoration: none;
     opacity: 1;
+}
+
+/***
+    About me section
+
+***/
+title-box{
+    text-align: center;
+}
+.title{
+    text-align: center;
+    font-size: 32px;
+    
+}
+hr{
+    text-align: left;
+    border: 0;
+    border-top: 1px solid rgba(0,0,0,.1);
+}
+hr.divider{
+    max-width: 3.25rem;
+    border-width:.2rem;
+    border-color: #43b2e3;
 }
